# MITAutonomousBicycleLaneFollowing

./: .gitignore  README.md
joystick/devel/: .catkin  .rosinstall  setup.sh
joystick/devel/include/vesc_msgs/: VescState.h  VescStateStamped.h
joystick/devel/lib/pkgconfig/: prototype.pc  vesc_ackermann.pc  vesc_driver.pc  vesc_msgs.pc
joystick/devel/lib/prototype/: joysticicktest
joystick/devel/lib/vesc_ackermann/: ackermann_to_vesc_node  vesc_to_odom_node
joystick/devel/lib/vesc_driver/: vesc_driver_node
joystick/src/prototype/: CMakeLists.txt  package.xml
joystick/src/prototype/hardware_rule/: devices.rules
joystick/src/prototype/launch/: joysticktest.launch  vesc.launch
joystick/src/prototype/src/: joysticicktest.cpp
linefollowing/src/lane_following/: CMakeLists.txt  package.xml
linefollowing/src/lane_following/scripts/: laneControl.py  lineDetector.py
linefollowing/src/lane_followingv2/: CMakeLists.txt  package.xml
linefollowing/src/lane_followingv2/launch/: laneFollowingv2.launch
linefollowing/src/lane_followingv2/msg/: Lines.msg
linefollowing/src/my_roscpp_library/: CMakeLists.txt  package.xml
linefollowing/src/my_roscpp_library/include/lane_followingv2/: AnaliseDasHoughs.h  Helper.h  HelperXML.h  PreProcessing.h  PublisherSubscriber.h  PublisherSubscriberArg.h  common.h
linefollowing/src/my_roscpp_library/src/: AnaliseDasHoughs.cpp  Helper.cpp  HelperXML.cpp  IPM.cpp  Kalman.cpp  KalmanHoughs.cpp  PreProcessing.cpp  config.xml  tinyxml2.cpp
linefollowing/src/prototype/: CMakeLists.txt  package.xml
(+30 files in other folders)
